@@ -1,3 +1,8 @@
+2008-10-06  Srinivasa Ragavan  <sragavan@novell.com>
+
+	* camel/camel-exchange-folder.c (class_init),
+	(count_by_expression): Adapt to new camel ABI
+
 2008-09-22  Srinivasa Ragavan  <sragavan@novell.com>
 
 	* configure.in: Version bump for Evolution Exchange 2.25.1
